K8S for Container Orchestration/Lab 18 - Control Pod-to-Pod Traffic via Network Policy/allow-app-to-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-mysql
  namespace: default      
spec:
  podSelector:
    matchLabels:
      app: mysql      

  policyTypes:
    - Ingress               

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nodejs-app    
      ports:
        - protocol: TCP
          port: 3306
